Imported CSS and Created Separate Components in React Framework

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" type="text/css" href="./styles.css" media=”screen” />
-  <script defer src="app.js"></script><script defer src="app.js"></script><script defer src="app.js"></script><script defer src="app.js"></script><script defer src="app.js"></script><script defer src="app.js"></script></head>
+<head>
  <body>
-   <div id="app">WarRoom Inc.</div>
+   <div id="app">If you see this, react is broken</div>
    <script src="app.js"></script>
  </body>
 </html>
