Added Framework for Component and imported Q/A mock data. Styling changes for overall App

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" type="text/css" href="./styles.css" media=”screen” />
+
 <head>
- <body>
-   <div id="app">If you see this, react is broken</div>
-   <script src="app.js"></script>
- </body>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./styles.css" media=”screen” />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap" rel="stylesheet">
+
+  <head>
+
+  <body>
+    <div id="app">If you see this, react is broken</div>
+    <script src="app.js"></script>
+  </body>
+
 </html>
