Optimized for accessibility and worked on the post request

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,19 @@
   <script src="https://kit.fontawesome.com/a2448ab465.js" crossorigin="anonymous"></script>
 
   <head>
-
-  <body>
-    <div id="app">If you see this, react is broken</div>
-    <script src="app.js"></script>
-  </body>
-
+    <header role="banner"></header>
+    <title>House of Ares</title>
+    <nav role="navigation">
+      <h1 className="makeTransparent">ARES</h1>
+    </nav>
+    <main>
+      <body>
+        <div id="app">If you see this, react is broken</div>
+        <script src="app.js"></script>
+      </body>
+    </main>
+    <footer role="contentinfo">
+      <p> Forged in the WarRoom Inc.</p>
+    </footer>
 </html>
+
