small styling changes

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       </body>
     </main>
     <footer role="contentinfo">
-      <p> Forged in the WarRoom Inc.</p>
+      <div id="app_footer">Forged in the WarRoom Inc.</div>
     </footer>
 </html>
 
