Working on optimizing the product

--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="./styles.css" media=”screen” />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preload" rel="stylesheet" type="text/css" href="./styles.css" media=”screen” />
+  <link rel="preload" rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a2448ab465.js" crossorigin="anonymous"></script>
 
   <head>
     <header role="banner"></header>
     <title>House of Ares</title>
     <nav role="navigation">
-      <h1 className="makeTransparent">ARES</h1>
+      <h1 className="makeTransparent">.</h1>
     </nav>
     <main>
       <body>
